<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="#FFFDE7"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFDE7"
        android:paddingTop="20dp"
        android:paddingBottom="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/convertUnitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01">

        <LinearLayout
            android:id="@+id/scrollableContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFDE7"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/firstRecall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:textSize="24sp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/secondRecall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:textSize="24sp" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:text="@string/results"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/finalMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/displayInfo"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                app:layout_constraintBottom_toBottomOf="parent" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/convertUnitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/newCalcButton"
        android:layout_gravity="center"
        android:layout_marginBottom="14dp"
        android:background="#6D234F"
        android:text="@string/ounces_grams"
        app:backgroundTint="#6D234F"
        app:cornerRadius="0pt" />

    <Button
        android:id="@+id/newCalcButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#6D234F"
        android:text="@string/resize_batch"
        app:backgroundTint="#6D234F" />

</androidx.constraintlayout.widget.ConstraintLayout>
